# portfolio-rs

./: .gitignore  Cargo.toml  flake.nix  yuri.toml
src/: data.rs  main.rs  routes.rs  solve.rs
templates/: base.html  index.html  profile.html  solve.html
templates/partials/: row.html  table.html
