[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["mime", "mime_guess", "with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros"] }
futures = "0.3.29"
ndarray = "0.15.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.190"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-livereload = "0.8.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
yahoo_finance_api = "2.1.0"
