[package]
name = "portfolio"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["mime", "mime_guess", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7", features = ["macros"] }
futures = "0.3.31"
ndarray = "0.16.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-livereload = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
yahoo_finance_api = "2.4.0"
